--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-context-menu",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "An AngularJS directive to display a context menu when a right-click event is triggered",
   "main": "dist/ng-context-menu.min.js",
   "devDependencies": {
@@ -8,7 +8,8 @@
     "gulp-concat": "~2.1.7",
     "gulp-uglify": "~0.2.0",
     "gulp-jshint": "~1.3.4",
-    "gulp-rename": "~0.2.2"
+    "gulp-rename": "~0.2.2",
+    "gulp-connect": "^2.0.5"
   },
   "scripts": {
     "test": "gulp test"
