--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ng-context-menu",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "An AngularJS directive to display a context menu when a right-click event is triggered",
-  "main": "dist/ng-context-menu.min.js",
+  "main": "dist/ng-context-menu.js",
   "devDependencies": {
     "gulp": "~3.5.1",
     "gulp-concat": "~2.1.7",
