--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "devDependencies": {
     "gulp": "~3.5.1",
     "gulp-concat": "~2.1.7",
-    "gulp-uglify": "~0.2.0",
+    "gulp-connect": "^2.0.5",
     "gulp-jshint": "~1.3.4",
     "gulp-rename": "~0.2.2",
-    "gulp-connect": "^2.0.5"
+    "gulp-uglify": "~0.2.0",
+    "protractor": "^1.2.0",
+    "gulp-protractor": "0.0.11",
+    "gulp-selenium": "0.0.2"
   },
   "scripts": {
     "test": "gulp test"
